--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "min-logger",
   "version": "1.0.0",
   "description": "",
+  "types": "dist/index.d.ts",
   "main": "dist/index.js",
   "files": [
     "dist"
@@ -9,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "rimraf dist",
-    "build": "tsc"
+    "build": "tsc -d"
   },
   "author": "",
   "license": "ISC",
