--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "min-logger",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "files": [
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "rimraf dist",
-    "build": "tsc"
+    "build": "tsc -d"
   },
   "author": "",
   "license": "ISC",
