--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "min-logger",
   "version": "1.0.1",
   "description": "",
-  "types": "@types/logger.d.ts",
+  "types": "dist/index.d.ts",
   "main": "dist/index.js",
   "files": [
-    "dist",
-    "@types"
+    "dist"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "rimraf dist",
-    "build": "tsc"
+    "build": "tsc --declaration"
   },
   "author": "",
   "license": "ISC",
