--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "strict": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "lib": [
       "esnext",
       "dom",
